--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -32,6 +32,7 @@
 }
 .backbutton{
   margin: 10px;
+  margin-bottom: 10px;
   border: 0px;
 
   border-radius: 10px;
